# npu_converter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  convert_neutron_model.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: SDK_INTEGRATION_PLAN.md  USAGE.md
dummy/: object_detection_neutron_headless.py
imx95_npu/: __init__.py  cli.py  detect.py  neutron.py  pipeline.py  quantize.py  repdata.py  sdk.py
imx95_npu/converters/: __init__.py  onnx_to_tflite.py  tf_to_tflite.py  tflite_passthrough.py  torch_to_tflite.py
scripts/: setup_sdk.sh
tests/: conftest.py  test_detect.py  test_neutron.py  test_pipeline_onnx_torch.py  test_pipeline_tf.py  test_pipeline_tflite.py  test_sdk.py
tools/: neutron-converter-stub.py
